# x50Lib

./: .gitignore  README.md
src/xcbridge/: CMakeLists.txt
src/xcbridge/cmakes/: FindMATLAB.cmake
src/xcbridge/examples/: testxValue.cpp
src/xcbridge/template/: BuildTreeSettings.cmake.in
src/xcbridge/xcbridge/MATLAB/: CMakeLists.txt
src/xccore/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  Makefile  cmake_install.cmake  xC.cmake  xCBuildTreeSettings.cmake  xCConfig.cmake
src/xccore/examples/: CMakeLists.txt  testProperty.cpp  testVariadicFunction.cpp
src/xccore/template/: Config.cmake.in
src/xccore/xc/core/: CMakeLists.txt  Makefile  cmake_install.cmake  core.cpp  core.h
src/xccore/xc/math/: CMakeLists.txt  Makefile  cmake_install.cmake  geometry.h  interpolation.h  math.cpp  math.h  math_fwd.h  matrix.h
src/xccore/xc/math/robotics/: trajectory_planning.h  trajectory_planning_spatial.h  trajectory_planning_temporal.h
src/xccore/xc/math/xc_eigen/unsupported/Eigen/: MonotoneCubicInterpolation
src/xccore/xc/math/xc_eigen/unsupported/Eigen/src/MonotoneCubicInterpolation/: CMakeLists.txt  MonotoneCubicHermiteInterpolation.h  MonotoneCubicInterpolation.h  MonotoneCubicInterpolationFwd.h
src/xccore/xc/test/: CMakeLists.txt  Makefile  cmake_install.cmake  math.cpp  math.cpp.old
src/xcdev/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  xCDev.cmake  xCDevBuildTreeSettings.cmake  xCDevConfig.cmake
src/xcdev/cmakes/: FindBoost.cmake
src/xcdev/template/: BuildTreeSettings.cmake.in  Config.cmake.in
src/xcdev/xcdev/PMAC/: CMakeLists.txt  Makefile  cmake_install.cmake  example_rotary_buffer.cpp  protocol.cpp  protocol.h  teriminal.cpp
src/xcdev/xcdev/core/: CMakeLists.txt  Makefile  cmake_install.cmake  network_based_dev.cpp  network_based_dev.h
src/xclng/: CMakeLists.txt  License.txt  README.md
src/xclng/template/: Config.cmake.in
src/xclng/xclng/engine/: CMakeLists.txt  area.cpp  datas.h  definition.h  engine.cpp  engine.h  xclng_test.cpp
