set(MODULE_NAME "${PROJECT_NAME}-${SubProject}")

find_package(MATLAB REQUIRED)

find_package(eigen REQUIRED)

include_directories(${MATLAB_INCLUDE_DIRS})

include_directories(${EIGEN_INCLUDE_DIR})

include_directories(${XC_INCLUDE_DIRS})

link_directories(${XC_LIBRARY_PATH})

file(GLOB HEADER_FILES *.h*)

file(GLOB SOURCE_FILES *.cpp)

add_library(${MODULE_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})

target_link_libraries(${MODULE_NAME} ${MATLAB_ENG_LIBRARY} ${XC_LIBRARIES})

set(INCLUDE_${SubProject}
  ${XC_INCLUDE_DIRS}
  ${MATLAB_INCLUDE_DIRS}
  PARENT_SCOPE)

set(LINK_${SubProject}
  ${MODULE_NAME}
  PARENT_SCOPE)

set_target_properties(${MODULE_NAME} PROPERTIES PUBLIC_HEADER "${HEADER_FILES}")

install(TARGETS ${MODULE_NAME}
  EXPORT ${PROJECT_NAME}
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}/${PROJECT_NAME}/${MODULE_NAME}" COMPONENT header
  COMPONENT bin)
