set(MODULE_NAME "${PROJECT_NAME}-${SubProject}")

file(GLOB HEADER_FILES *.h*)
file(GLOB INLINE_FILES *.inl)
file(GLOB SOURCE_FILES *.cpp)

find_package(Boost REQUIRED COMPONENTS system)

include_directories(${Boost_INCLUDE_DIRS})

add_library(${MODULE_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES} ${INLINE_FILES})

set_target_properties(${MODULE_NAME} PROPERTIES PUBLIC_HEADER "${HEADER_FILES}")

set(INCLUDE_${SubProject}
  ${Boost_INCLUDE_DIRS}
  PARENT_SCOPE)

set(LIBRARY_${SubProject}
  ${MODULE_NAME}
  ${Boost_LIBRARIES}
  PARENT_SCOPE)

install(TARGETS ${MODULE_NAME}
  EXPORT ${PROJECT_NAME}
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}/${PROJECT_NAME}/${MODULE_NAME}" COMPONENT header
  COMPONENT bin)
