set(MODULE_NAME "${PROJECT_NAME}-${SubProject}")

find_package(Boost REQUIRED COMPONENTS system)
find_package(Eigen3 REQUIRED)

include_directories(${Boost_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIR})

file(GLOB HEADER_FILES *.h)
file(GLOB SOURCE_FILES *.cpp)

add_library(${MODULE_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})

set_target_properties(${MODULE_NAME} PROPERTIES PUBLIC_HEADER "${HEADER_FILES}")

set(LIBRARY_${SubProject}
  ${MODULE_NAME}
  PARENT_SCOPE)

set(INCLUDE_${SubProject}
  ${EIGEN_INCLUDE_DIR}
  PARENT_SCOPE)

install(TARGETS ${MODULE_NAME}
  EXPORT ${PROJECT_NAME}
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}/${PROJECT_NAME}/${MODULE_NAME}" COMPONENT header
  COMPONENT bin)
